--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@types/cheerio": "^0.22.35",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.3",
     "jsdom": "^20.0.0",
     "ky": "^0.31.0",
