--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "dayjs": "^1.11.3",
     "jsdom": "^20.0.0",
     "ky": "^0.31.0",
-    "next": "12.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
@@ -33,7 +33,7 @@
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.1",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
