--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/react-dom": "18.0.6",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
+    "eslint": "8.0.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -51,6 +51,9 @@
     "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^3.1.5",
     "typescript": "4.7.4"
+  },
+  "resolutions": {
+    "strip-ansi": "^6.0.1"
   },
   "lint-staged": {
     "*.{css,scss}": [
