--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.3",
     "jsdom": "^20.0.0",
-    "ky": "^0.31.0",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
-    "@types/node": "18.0.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.0.0",
