--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/cheerio": "^0.22.35",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.3",
+    "framer-motion": "^11.2.10",
     "jsdom": "^20.0.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
