--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rewards": "^2.0.4",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
