--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
+    "react-scroll": "^1.9.0",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
     "stylelint-config-recess-order": "^3.0.0",
